--- a/formaldehyde/index.html
+++ b/formaldehyde/index.html
@@ -3,9 +3,8 @@
 <head>
 <!--	Authors: Justin Fairbourn and Scott Ensign -->
 <!--	Created at Utah State University with support from the Chemistry department. -->
-<!--  Copy this directory and complete the TODO's to make a lesson for a single molecule/set of molecules. -->
 	<meta charset="utf-8">
-	<title>Template Lesson</title>
+	<title>Formaldehyde Orbitals</title>
 	<link href="lesson_page.css" rel="stylesheet" type="text/css">
   <script src="../../jsmol/JSmol.min.js"></script>
   <script>
@@ -14,8 +13,9 @@
       height: 500,      
       width: 500,
       j2sPath: "../../jsmol/j2s",
-      // TODO: Modify the initial script to load the appropriate molecule.
-      script: "load formaldehyde.log; spacefill 20%; wireframe 0.15; spin off; frank on; background=white; antialiasDisplay=true;",
+      script: "load formaldehyde.log; spacefill 20%; select @1, @2; bondorder 2; wireframe 0.15; spin off; frank on; background=white; antialiasDisplay=true;" +
+        'select @1, @2; isosurface piBonds CUTOFF 0.1 COLOR TRANSLUCENT 128 [xff0000] mo 7; select *;' +
+        'isosurface OFF;',
       debug: false
     };
   </script>
@@ -25,7 +25,7 @@
 	<header>
     <button id="restartButton"></button>
 		<div id="name" class="app">
-			Template Lesson
+			Formaldehyde Orbitals
     </div>
     <button id="refreshButton"></button>
 	</header>
