--- a/acetylene/index.html
+++ b/acetylene/index.html
@@ -15,7 +15,11 @@
       width: 500,
       j2sPath: "../../jsmol/j2s",
       // TODO: Modify the initial script to load the appropriate molecule.
-      script: "load acetylene.log; select @1, @2; bondOrder 3; spacefill 30%; wireframe 0.10; spin off; frank on; background=white; antialiasDisplay=true;",
+      script: "load acetylene.log; select @1, @2; bondOrder 3; spacefill 30%; wireframe 0.10; spin off; frank on; background=white; antialiasDisplay=true;" +
+        'select @1, @2; isosurface piBond1 CUTOFF 0.1 COLOR TRANSLUCENT 128 [xff0000] mo 6;' +
+        'select @1, @2; isosurface piBond2 CUTOFF 0.1 COLOR TRANSLUCENT 128 [xff0000] mo 7;' + 
+        `draw p1 translucent green polygon [{-1, -1, 1}, {-1, 1, -1}, {2.2, 1, -1},{2.2, -1, 1}];` +
+        `draw p2 translucent green polygon [{-1, 1, 1}, {-1, -1, -1}, {2.2, -1, -1},{2.2, 1, 1}];`,
       debug: false
     };
   </script>
