--- a/co2/index.html
+++ b/co2/index.html
@@ -5,7 +5,7 @@
 <!--	Created at Utah State University with support from the Chemistry department. -->
 <!--  Copy this directory and complete the TODO's to make a lesson for a single molecule/set of molecules. -->
 	<meta charset="utf-8">
-	<title>Acetylene Electrons Lesson</title>
+	<title>Template Lesson</title>
 	<link href="lesson_page.css" rel="stylesheet" type="text/css">
   <script src="../../jsmol/JSmol.min.js"></script>
   <script>
@@ -15,11 +15,9 @@
       width: 500,
       j2sPath: "../../jsmol/j2s",
       // TODO: Modify the initial script to load the appropriate molecule.
-      script: "load acetylene.log; select @1, @2; bondOrder 3; spacefill 30%; wireframe 0.10; spin off; frank on; background=white; antialiasDisplay=true;" +
-        'select @1, @2; isosurface piBond1 CUTOFF 0.1 COLOR TRANSLUCENT 128 [xff0000] mo 6;' +
-        'select @1, @2; isosurface piBond2 CUTOFF 0.1 COLOR TRANSLUCENT 128 [xff0000] mo 7;' + 
-        `draw p1 translucent green polygon [{-1, -1, 1}, {-1, 1, -1}, {2.2, 1, -1},{2.2, -1, 1}];` +
-        `draw p2 translucent green polygon [{-1, 1, 1}, {-1, -1, -1}, {2.2, -1, -1},{2.2, 1, 1}];`,
+      script: "load co2.log; bondorder 2; spacefill 30%; wireframe 0.10; spin off; frank on; background=white; antialiasDisplay=true;" +
+        `select @1, @2; isosurface piBond1 CUTOFF 0.1 COLOR TRANSLUCENT 128 [xff0000] mo 7;` +
+        `select @1, @3; isosurface piBond2 CUTOFF 0.1 COLOR TRANSLUCENT 128 [x0000ff] mo 8;`,
       debug: false
     };
   </script>
