--- a/co2/index.html
+++ b/co2/index.html
@@ -15,9 +15,16 @@
       width: 500,
       j2sPath: "../../jsmol/j2s",
       // TODO: Modify the initial script to load the appropriate molecule.
-      script: "load co2-2.log; bondorder 2; spacefill 30%; wireframe 0.10; spin off; frank on; background=white; antialiasDisplay=true;" +
-        `select @1, @2; isosurface piBond1 CUTOFF 0.1 COLOR TRANSLUCENT 128 [xffff00] mo 7;` +
-        `select @1, @3; isosurface piBond2 CUTOFF 0.1 COLOR TRANSLUCENT 128 [xff9000] mo 8;`,
+      script: "load co2.log; bondorder 2; spacefill 30%; wireframe 0.10; spin off; frank on; background=white; antialiasDisplay=true;" +
+        `select @1, @2; isosurface piBond1 CUTOFF 0.1 COLOR TRANSLUCENT 128 [xffff00] mo 7; ` +
+        `select @1, @3; isosurface piBond2 CUTOFF 0.1 COLOR TRANSLUCENT 128 [xff9000] mo 8; ` +
+        `isosurface id lp1 color translucent 0.8 GREEN center @2 lobe { .773, 1.404, 0, 0.6 }; ` +
+        `isosurface id lp2 color translucent 0.8 GREEN center @2 lobe { .773, -1.404, 0, 0.6 }; ` +
+        `isosurface id lp3 color translucent 0.8 GREEN center @3 lobe { -.773, 0, 1.404, 0.6 }; ` +
+        `isosurface id lp4 color translucent 0.8 GREEN center @3 lobe { -.773, 0, -1.404, 0.6 }; ` +
+        `draw ID e_geo1 LINE [@1, {1.97, 1.404, 0}, {1.97, -1.404, 0}, @1] DIAMETER 20 COLOR yellow; ` +
+        `draw ID e_geo2 LINE [@1, {-1.97, 0, 1.404}, {-1.97, 0, -1.404}, @1] DIAMETER 20 COLOR yellow; ` +
+        `isosurface off; draw off; `,
       debug: false
     };
   </script>
