--- a/acetic_acid/index.html
+++ b/acetic_acid/index.html
@@ -14,7 +14,12 @@
       height: 500,      
       width: 500,
       j2sPath: "../../jsmol/j2s",
-      script: "load acetic_acid.log; spacefill 20%; wireframe 0.15; spin off; frank on; background=white; antialiasDisplay=true; connect (@1, @2); select @2, @6; bondorder 2;",
+      script: "load acetic_acid.log; spacefill 20%; wireframe 0.15; spin off; frank on; background=white; antialiasDisplay=true; select @2, @8; bondorder 2;" +
+        "draw ID e_geo1 LINE [@3, @4, @5, @3, @2, @4, @5, @2, @4] DIAMETER 20 COLOR yellow; " +
+        "draw ID e_geo2 LINE [@7, {2.755, 1.575, 0.475}, {2.755, 1.05, -1.275}, @7, @2, {2.755, 1.575, 0.475}, {2.755, 1.05, -1.275}, @2] DIAMETER 20 COLOR yellow; " +
+        "draw ID e_geo3 LINE [@1, @6, @8, @1] DIAMETER 20 COLOR yellow; ",
+        // oxygen 1 lobe 1 point: {2.755, 1.575, 0.475}
+        // oxygen 1 lobe 2 point: {2.755, 1.05, -1.275}
       debug: false
     };
   </script>
