--- a/acetic_acid/index.html
+++ b/acetic_acid/index.html
@@ -17,9 +17,8 @@
       script: "load acetic_acid.log; spacefill 20%; wireframe 0.15; spin off; frank on; background=white; antialiasDisplay=true; select @2, @8; bondorder 2;" +
         "draw ID e_geo1 LINE [@3, @4, @5, @3, @2, @4, @5, @2, @4] DIAMETER 20 COLOR yellow; " +
         "draw ID e_geo2 LINE [@7, {2.755, 1.575, 0.475}, {2.755, 1.05, -1.275}, @7, @2, {2.755, 1.575, 0.475}, {2.755, 1.05, -1.275}, @2] DIAMETER 20 COLOR yellow; " +
-        "draw ID e_geo3 LINE [@1, @6, @8, @1] DIAMETER 20 COLOR yellow; ",
-        // oxygen 1 lobe 1 point: {2.755, 1.575, 0.475}
-        // oxygen 1 lobe 2 point: {2.755, 1.05, -1.275}
+        "draw ID e_geo3 LINE [@1, @6, @8, @1] DIAMETER 20 COLOR yellow; " +
+        "draw ID e_geo4 LINE [@2, {1.66, -2, 0.51}, {3.37, -0.86, 0.21}, @2] DIAMETER 20 COLOR yellow;",
       debug: false
     };
   </script>
