--- a/acetic_acid/index.html
+++ b/acetic_acid/index.html
@@ -18,7 +18,8 @@
         "draw ID e_geo1 LINE [@3, @4, @5, @3, @2, @4, @5, @2, @4] DIAMETER 20 COLOR yellow; " +
         "draw ID e_geo2 LINE [@7, {2.755, 1.575, 0.475}, {2.755, 1.05, -1.275}, @7, @2, {2.755, 1.575, 0.475}, {2.755, 1.05, -1.275}, @2] DIAMETER 20 COLOR yellow; " +
         "draw ID e_geo3 LINE [@1, @6, @8, @1] DIAMETER 20 COLOR yellow; " +
-        "draw ID e_geo4 LINE [@2, {1.66, -2, 0.51}, {3.37, -0.86, 0.21}, @2] DIAMETER 20 COLOR yellow;",
+        "draw ID e_geo4 LINE [@2, {1.66, -2, 0.51}, {3.37, -0.86, 0.21}, @2] DIAMETER 20 COLOR yellow;" +
+        "select @8, @2; isosurface piBond CUTOFF 0.075 COLOR TRANSLUCENT 128 [x00ff00] mo 15;",
       debug: false
     };
   </script>
