--- a/2-butene-cis/index.html
+++ b/2-butene-cis/index.html
@@ -5,7 +5,7 @@
 <!--	Created at Utah State University with support from the Chemistry department. -->
 <!--  Copy this directory and complete the TODO's to make a lesson for a single molecule/set of molecules. -->
 	<meta charset="utf-8">
-	<title>1-Butene Lesson</title>
+	<title>Template Lesson</title>
 	<link href="lesson_page.css" rel="stylesheet" type="text/css">
   <script src="../../jsmol/JSmol.min.js"></script>
   <script>
@@ -15,20 +15,8 @@
       width: 500,
       j2sPath: "../../jsmol/j2s",
       // TODO: Modify the initial script to load the appropriate molecule.
-      script: "load 1-butene.log; spacefill 20%; wireframe 0.15; spin on; frank on; background=white; antialiasDisplay=true; set measurements 10;" +
-        "select @1, @2; bondorder 2;" +
-        "draw ID geo1 LINE [@3, @4, @2, @3] DIAMETER 20 COLOR YELLOW;" +
-        "draw ID geo2 LINE [@1, @5, @6, @1] DIAMETER 20 COLOR YELLOW;" +
-        "draw ID geo3 LINE [@2, @7, @8, @9, @7, @8, @2, @9] DIAMETER 20 COLOR YELLOW;" +
-        "draw ID geo4 LINE [@5, @10, @11, @12, @10, @11, @5, @12] DIAMETER 20 COLOR YELLOW;" +
-        "draw p1 translucent blue polygon [@6, @5, @4];" +
-        "draw p2 translucent blue polygon [@6, @3, @4];" +
-        "select @1, @2; isosurface piBond CUTOFF 0.1 COLOR TRANSLUCENT 128 [x00ff00] mo 16;" +
-        "select @1; label \"C1\"; font label 24; color label red;" +
-        "select @2; label \"C2\"; font label 24; color label red;" +
-        "select @5; label \"C3\"; font label 24; color label red;" +
-        "select @7; label \"C4\"; font label 24; color label red;" +
-        "select @1, @2, @5, @7; label hide; ",
+      script: "load 2-butene.log; spacefill 20%; wireframe 0.15; spin off; frank on; background=white; antialiasDisplay=true;" +
+        "select @2, @6, @14, @18; bondorder 2;",
       debug: false
     };
   </script>
@@ -38,7 +26,7 @@
 	<header>
     <button id="restartButton"></button>
 		<div id="name" class="app">
-			1-Butene Lesson
+			Template Lesson
     </div>
     <button id="refreshButton"></button>
 	</header>
