--- a/2-butene-cis/index.html
+++ b/2-butene-cis/index.html
@@ -5,7 +5,7 @@
 <!--	Created at Utah State University with support from the Chemistry department. -->
 <!--  Copy this directory and complete the TODO's to make a lesson for a single molecule/set of molecules. -->
 	<meta charset="utf-8">
-	<title>Template Lesson</title>
+	<title>Cis-2-Butene</title>
 	<link href="lesson_page.css" rel="stylesheet" type="text/css">
   <script src="../../jsmol/JSmol.min.js"></script>
   <script>
@@ -16,7 +16,17 @@
       j2sPath: "../../jsmol/j2s",
       // TODO: Modify the initial script to load the appropriate molecule.
       script: "load 2-butene.log; spacefill 20%; wireframe 0.15; spin off; frank on; background=white; antialiasDisplay=true;" +
-        "select @2, @6, @14, @18; bondorder 2;",
+        "select @2, @6, @14, @18; bondorder 2;" +
+        "draw ID geo1 LINE [@2, @3, @4, @5, @3, @4, @2, @5] DIAMETER 20 COLOR YELLOW;" +
+        "draw ID geo2 LINE [@6, @10, @11, @12, @10, @11, @6, @12] DIAMETER 20 COLOR YELLOW;" +
+        "draw ID geo3 LINE [@1, @7, @6, @1] DIAMETER 20 COLOR YELLOW;" +
+        "draw ID geo4 LINE [@2, @8, @9, @2] DIAMETER 20 COLOR YELLOW;" +
+        "draw p1 translucent blue polygon [@7, @8, @9];" +
+        "draw p2 translucent blue polygon [@7, @1, @8];" +
+        "select @1; label \"C1\"; font label 24; color label red;" +
+        "select @2; label \"C2\"; font label 24; color label red;" +
+        "select @6; label \"C3\"; font label 24; color label red;" +
+        "select @8; label \"C4\"; font label 24; color label red;",
       debug: false
     };
   </script>
@@ -26,7 +36,7 @@
 	<header>
     <button id="restartButton"></button>
 		<div id="name" class="app">
-			Template Lesson
+			Cis-2-Butene
     </div>
     <button id="refreshButton"></button>
 	</header>
