--- a/2-butene-cis/index.html
+++ b/2-butene-cis/index.html
@@ -23,6 +23,7 @@
         "draw ID geo4 LINE [@2, @8, @9, @2] DIAMETER 20 COLOR YELLOW;" +
         "draw p1 translucent blue polygon [@7, @8, @9];" +
         "draw p2 translucent blue polygon [@7, @1, @8];" +
+        "select @2, @6; isosurface piBond CUTOFF 0.1 COLOR TRANSLUCENT 128 [xffff00] mo 31;" +
         "select @1; label \"C1\"; font label 24; color label red;" +
         "select @2; label \"C2\"; font label 24; color label red;" +
         "select @6; label \"C3\"; font label 24; color label red;" +
