--- a/2-butene-trans/index.html
+++ b/2-butene-trans/index.html
@@ -5,7 +5,7 @@
 <!--	Created at Utah State University with support from the Chemistry department. -->
 <!--  Copy this directory and complete the TODO's to make a lesson for a single molecule/set of molecules. -->
 	<meta charset="utf-8">
-	<title>Cis-2-Butene</title>
+	<title>Trans-2-Butene</title>
 	<link href="lesson_page.css" rel="stylesheet" type="text/css">
   <script src="../../jsmol/JSmol.min.js"></script>
   <script>
@@ -17,17 +17,17 @@
       // TODO: Modify the initial script to load the appropriate molecule.
       script: "load 2-butene.log; spacefill 20%; wireframe 0.15; spin off; frank on; background=white; antialiasDisplay=true;" +
         "select @2, @6, @14, @18; bondorder 2;" +
-        "draw ID geo1 LINE [@2, @3, @4, @5, @3, @4, @2, @5] DIAMETER 20 COLOR YELLOW;" +
-        "draw ID geo2 LINE [@6, @10, @11, @12, @10, @11, @6, @12] DIAMETER 20 COLOR YELLOW;" +
-        "draw ID geo3 LINE [@1, @7, @6, @1] DIAMETER 20 COLOR YELLOW;" +
-        "draw ID geo4 LINE [@2, @8, @9, @2] DIAMETER 20 COLOR YELLOW;" +
-        "draw p1 translucent blue polygon [@7, @8, @9];" +
-        "draw p2 translucent blue polygon [@7, @1, @8];" +
-        "select @2, @6; isosurface piBond CUTOFF 0.1 COLOR TRANSLUCENT 128 [xffff00] mo 31;" +
-        "select @1; label \"C1\"; font label 24; color label red;" +
-        "select @2; label \"C2\"; font label 24; color label red;" +
-        "select @6; label \"C3\"; font label 24; color label red;" +
-        "select @8; label \"C4\"; font label 24; color label red;",
+        "draw ID geo1 LINE [@14, @15, @16, @17, @15, @16, @14, @17] DIAMETER 20 COLOR YELLOW;" +
+        "draw ID geo2 LINE [@18, @22, @23, @24, @22, @23, @18, @24] DIAMETER 20 COLOR YELLOW;" +
+        "draw ID geo3 LINE [@13, @19, @18, @13] DIAMETER 20 COLOR YELLOW;" +
+        "draw ID geo4 LINE [@14, @20, @21, @14] DIAMETER 20 COLOR YELLOW;" +
+        "draw p1 translucent blue polygon [@13, @20, @21];" +
+        "draw p2 translucent blue polygon [@19, @13, @20];" +
+        "select @14, @18; isosurface piBond CUTOFF 0.1 COLOR TRANSLUCENT 128 [xffff00] mo 32;" +
+        "select @13; label \"C1\"; font label 24; color label red;" +
+        "select @14; label \"C2\"; font label 24; color label red;" +
+        "select @18; label \"C3\"; font label 24; color label red;" +
+        "select @20; label \"C4\"; font label 24; color label red;",
       debug: false
     };
   </script>
@@ -37,7 +37,7 @@
 	<header>
     <button id="restartButton"></button>
 		<div id="name" class="app">
-			Cis-2-Butene
+			Trans-2-Butene
     </div>
     <button id="refreshButton"></button>
 	</header>
