--- a/2-butene-trans/index.html
+++ b/2-butene-trans/index.html
@@ -23,8 +23,7 @@
         "draw ID geo4 LINE [@14, @20, @21, @14] DIAMETER 20 COLOR YELLOW;" +
         "draw p1 translucent blue polygon [@13, @20, @21];" +
         "draw p2 translucent blue polygon [@19, @13, @20];" +
-        "draw arr1 arrow {@20} {-3.8, 0.5, -0.5} {@13} width 0.13 color red;" +
-        "draw arr2 arrow {@13} {-3.8, 0.5, -0.5} {@20} width 0.13 color red;" +
+        "draw id axisLine LINE [{-5.27, 1.54, -0.48} {-0.02, 2.22, 0.41}] DIAMETER 20 COLOR RED;" +
         "select @14, @18; isosurface piBond CUTOFF 0.1 COLOR TRANSLUCENT 128 [xffff00] mo 32;" +
         "select @13; label \"C1\"; font label 24; color label red;" +
         "select @14; label \"C2\"; font label 24; color label red;" +
