--- a/benzene/index.html
+++ b/benzene/index.html
@@ -5,7 +5,7 @@
 <!--	Created at Utah State University with support from the Chemistry department. -->
 <!--  Copy this directory and complete the TODO's to make a lesson for a single molecule/set of molecules. -->
 	<meta charset="utf-8">
-	<title>Template Lesson</title>
+	<title>Benzene Lesson</title>
 	<link href="lesson_page.css" rel="stylesheet" type="text/css">
   <script src="../../jsmol/JSmol.min.js"></script>
   <script>
@@ -15,7 +15,7 @@
       width: 500,
       j2sPath: "../../jsmol/j2s",
       // TODO: Modify the initial script to load the appropriate molecule.
-      script: "load h2o.pdb; spacefill 20%; wireframe 0.15; spin off; frank on; background=white; antialiasDisplay=true;",
+      script: "load benzene.log; spacefill 20%; wireframe 0.15; spin off; frank on; background=white; antialiasDisplay=true;",
       debug: false
     };
   </script>
@@ -25,7 +25,7 @@
 	<header>
     <button id="restartButton"></button>
 		<div id="name" class="app">
-			Template Lesson
+			Benzene Lesson
     </div>
     <button id="refreshButton"></button>
 	</header>
