Done with the alkanes lesson.

--- a/alkanes/index.html
+++ b/alkanes/index.html
@@ -5,7 +5,7 @@
 <!--	Created at Utah State University with support from the Chemistry department. -->
 <!--  Copy this directory and complete the TODO's to make a lesson for a single molecule/set of molecules. -->
 	<meta charset="utf-8">
-	<title>Template Lesson</title>
+	<title>Alkanes Lesson</title>
 	<link href="lesson_page.css" rel="stylesheet" type="text/css">
   <script src="../../jsmol/JSmol.min.js"></script>
   <script>
@@ -25,7 +25,7 @@
 	<header>
     <button id="restartButton"></button>
 		<div id="name" class="app">
-			Template Lesson
+			Alkanes Lesson
     </div>
     <button id="refreshButton"></button>
 	</header>
