Done with the alcohols lesson miinus the dipoles and partial charges in the last few instructions.

--- a/alcohols/index.html
+++ b/alcohols/index.html
@@ -28,7 +28,9 @@
         "select @54; label \"C3\"; font label 19; color label black;" +
         "select @48; label \"C1\"; font label 19; color label black;" +
         "select @44; label \"C2\"; font label 19; color label black;" +
-        "select @43; label \"C3\"; font label 19; color label black;",
+        "select @43; label \"C3\"; font label 19; color label black;" +
+        "draw ID roh_geo LINE [{-3.2390959488399425 1.6821255184672737 -2.2861656272575708}, {-1.979412745578614 2.3273524428270953 -2.5771292056886708}, @31, {-3.2390959488399425 1.6821255184672737 -2.2861656272575708}, @9, @31, {-1.979412745578614 2.3273524428270953 -2.5771292056886708}, @9] DIAMETER 20 COLOR YELLOW;" +
+        "draw ID roh_m_geo line [@9, @12, @31] DIAMETER 15 COLOR LIGHTBLUE;",
       debug: false
     };
   </script>
