--- a/alcohols/index.html
+++ b/alcohols/index.html
@@ -15,22 +15,7 @@
       height: 500,
       width: 500,
       j2sPath: "../../jsmol/j2s",
-      script: "load alcohols.log; spacefill 20%; wireframe 0.15; spin off; frank on; background=white; antialiasDisplay=true;" +
-        "select @10; label \"methanol\"; font label 24; color label blue;" +
-        "select @24; label \"ethanol\"; font label 24; color label blue;" +
-        "select @53; label \"1-propanol\"; font label 24; color label blue;" +
-        "select @83; label \"2-butanol\"; font label 24; color label blue;" +
-        "select @32; label \"C1\"; font label 19; color label black;" +
-        "select @33; label \"C2\"; font label 19; color label black;" +
-        "select @37; label \"C3\"; font label 19; color label black;" +
-        "select @59; label \"C1\"; font label 19; color label black;" +
-        "select @55; label \"C2\"; font label 19; color label black;" +
-        "select @54; label \"C3\"; font label 19; color label black;" +
-        "select @48; label \"C1\"; font label 19; color label black;" +
-        "select @44; label \"C2\"; font label 19; color label black;" +
-        "select @43; label \"C3\"; font label 19; color label black;" +
-        "draw ID roh_geo LINE [{-3.2390959488399425 1.6821255184672737 -2.2861656272575708}, {-1.979412745578614 2.3273524428270953 -2.5771292056886708}, @31, {-3.2390959488399425 1.6821255184672737 -2.2861656272575708}, @9, @31, {-1.979412745578614 2.3273524428270953 -2.5771292056886708}, @9] DIAMETER 20 COLOR YELLOW;" +
-        "draw ID roh_m_geo line [@9, @12, @31] DIAMETER 15 COLOR LIGHTBLUE;",
+      script: "load alcohols.log; spacefill 20%; wireframe 0.15; spin off; frank on; background=white; antialiasDisplay=true;",
       debug: false
     };
   </script>
@@ -62,7 +47,6 @@
     </section>
   </main>
 
-  <script src="instruction.js"></script>
   <script src="lesson.js"></script>
   <script src="script.js"></script>
 </body>
